# usb-pci-explorer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: rpm-build.yml
desktop/: usb-pci-explorer.desktop
packaging/: usb-pci-explorer.spec
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  usb_adapter.cpp  usb_adapter.h  usb_mapper.cpp  usb_mapper.h
